--- a/clase7/index2.html
+++ b/clase7/index2.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase7 CSS</title>
-    <link rel="stylesheet" href="./css/style.css"> <!--de esta manera incluyo un archivo 
+    <link rel="stylesheet" href="./css/style2.css"> <!--de esta manera incluyo un archivo 
     externo de css al .html-->
 
 </head>
     <body>
     <!--esto es un comentario, pero HTML -->
     <header> <!--encabezadp de la pagina-->
-        <nav id="nav"> <!--barra de navegacion-->
+        <img src="logo.png" class="img" alt="logo">
+        <nav class="nav"> <!--barra de navegacion-->
             <a class="links" href="#">Inicio</a> <br>
             <a class="links" href="#">Nosotros</a> <br>
             <a class="links" href="#">Contacto</a> <br>
@@ -20,20 +21,20 @@
 
         </nav>
     </header>
-    <main>
-        <section id="idsection">
-            <h1>Titulo de pagina</h1>
+    <main class="container">
+        <section class="section">
+            <h1>¡Hello Kitty!</h1>
         </section>
-        <section>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia sint nulla ut repellendus quibusdam asperiores saepe, maiores, officiis ipsum quae molestias mollitia nisi aspernatur commodi assumenda exercitationem corrupti aliquam voluptatem!
-            </p>
-            <ul>
+        <section class="section">
+            <b> <i><p>
+                ¡Bienvenidx! Este es el sitio oficial de Hello Kitty
+            </p> </b></i>
+            <ul class="links">
                 <li>
                     <a href="#">Link A</a>
                 </li>
                 <li>
-                    <a id="linkActive" href="#">Link B</a>
+                    <a href="#">Link B</a>
                 </li>
             </ul>
         </section>
