--- a/clase8/index.html
+++ b/clase8/index.html
@@ -17,7 +17,7 @@
     </style>
     -->
     <!--ahora vinculo mi css al html-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/clase8/style/style.css">
 </head>
 <body>
     <header>
