--- a/tp-integrador/index.html
+++ b/tp-integrador/index.html
@@ -39,12 +39,14 @@
     </nav>
 <!--card img principal-->
 <div class="card bg-dark text-white">
+    <div class="imagenfondo">
     <img src="/tp-integrador/img/ba1.jpg" class="card-img" alt="...">
+    </div>
     <div class="card-img-overlay">
     <div class="row justify-content-end">
-        <div class="col-5">
+        <div class="col-sm-12 col-md-5">
       <h4 class="card-title">Conf Bs As</h4>
-      <p class="card-text">Bs As llega por primera vez Argentina. Un evento para compartir con
+      <p class="card-text" id="textobsas">Bs As llega por primera vez Argentina. Un evento para compartir con
         nuestra comunidad el conocimiento y experiencia de los expertos que
         están creando el futuro de internet. Ven a conocer a miembros del
         evento, a otros estudiantes de Codo a Codo y los oradores de primer
@@ -54,9 +56,10 @@
         <button type="button" class="btn btn-success">Comprar tickets</button>
       </div>
     </div>
+    </div>
 </div> 
-</div>
   </div>
+  
 <!---cards-->
 <div class="conoce">
     <h6>CONOCE A LOS</h6>
