--- a/tp-integrador/index.html
+++ b/tp-integrador/index.html
@@ -19,26 +19,26 @@
       
       <ul class="nav justify-content-end colorlinks">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+          <a class="nav-link active" aria-current="page" href="#conferencia">La conferencia</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Los oradores</a>
+            <a class="nav-link" aria-current="page" href="#oradores">Los oradores</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">El lugar y la fecha</a>
+            <a class="nav-link" aria-current="page" href="#bsasoctubre">El lugar y la fecha</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Conviértete en orador</a>
+            <a class="nav-link" aria-current="page" href="#convierte">Conviértete en orador</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" id="comprartickets" href="#">Comprar tickets</a> 
+            <a class="nav-link" id="comprartickets" href="https://www.ticketek.com.ar/">Comprar tickets</a> 
 
         </li>
       </ul>
         </div>
     </nav>
 <!--card img principal-->
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white" id="conferencia">
     <div class="imagenfondo">
     <img src="/tp-integrador/img/ba1.jpg" class="card-img" alt="...">
     </div>
@@ -61,7 +61,7 @@
   </div>
   
 <!---cards-->
-<div class="conoce">
+<div class="conoce" id="oradores">
     <h6>CONOCE A LOS</h6>
     <h1>ORADORES</h1>
 </div>
@@ -103,7 +103,7 @@
 
         <br>
     <!--card bs as-->
-    <div class="espaciobsas">
+    <div class="espaciobsas" id="bsasoctubre">
     <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-6">
@@ -127,7 +127,7 @@
       </div>
 <br>
     <!--form-->
-    <div class="container"> 
+    <div class="container" id="convierte"> 
     <div class="mb-1">
     <h6>CONVIÉRTETE EN UN</h6>
     <h1>ORADOR</h1>
