--- a/clase6/index.html
+++ b/clase6/index.html
@@ -41,7 +41,7 @@
                         </optgroup>
                     </select>
                     <br>
-                    <input list="browser" name="databrowser">
+                    <input list="browser" name="databrowser"/>
                     <datalist id="browser">
                         <option>Chrome</option>
                         <option>Edge</option>
