--- a/tp-integrador/index.html
+++ b/tp-integrador/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" aria-current="page" href="#convierte">Conviértete en orador</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" id="comprartickets" href="https://www.ticketek.com.ar/">Comprar tickets</a> 
+            <a class="nav-link" id="comprartickets" href="comprartickets.html">Comprar tickets</a> 
 
         </li>
       </ul>
